[gd_scene load_steps=5 format=3 uid="uid://bh20pin180h43"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_4nrkt"]
[ext_resource type="Texture2D" uid="uid://cgeerywgvilq0" path="res://icon.svg" id="1_jeach"]
[ext_resource type="LabelSettings" uid="uid://gkveuu0u01ww" path="res://assets/main_label.tres" id="3_ddwdr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ohv6s"]
bg_color = Color(0.83, 0.617105, 0.1577, 0.184314)
draw_center = false
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="Game" type="Control"]
z_index = 5
custom_minimum_size = Vector2(108, 144)
layout_mode = 3
anchor_right = 0.094
anchor_bottom = 0.222
offset_right = -0.288002
offset_bottom = 0.143982
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_4nrkt")

[node name="Art" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("1_jeach")
expand_mode = 1

[node name="Label" type="Label" parent="Art"]
unique_name_in_owner = true
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -12.0
offset_right = 42.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "Game"
label_settings = ExtResource("3_ddwdr")
vertical_alignment = 1
autowrap_mode = 3

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ohv6s")

[node name="RightClick" type="PopupMenu" parent="."]
unique_name_in_owner = true
position = Vector2i(30, 35)
size = Vector2i(100, 61)
always_on_top = true

[node name="Button" type="Button" parent="RightClick"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 31.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Edit"

[node name="Button2" type="Button" parent="RightClick"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -31.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Delete"

[connection signal="gui_input" from="Art" to="." method="_on_game_gui_input"]
[connection signal="mouse_entered" from="Art" to="." method="_on_game_mouse_entered"]
[connection signal="mouse_exited" from="Art" to="." method="_on_game_mouse_exited"]
[connection signal="mouse_exited" from="RightClick" to="." method="_on_right_click_mouse_exited"]
